Fix: main height. Feat: scrollbar styled

--- a/gifos-app/src/components/footer/Footer.scss
+++ b/gifos-app/src/components/footer/Footer.scss
@@ -10,6 +10,7 @@ footer {
     font-weight: bold;
     padding: 50px 50px 10px;
     transition: all 0.3s;
+    background-color: $white;
 
     img {
         padding: 7px;
